--- a/control-panel.html
+++ b/control-panel.html
@@ -341,7 +341,7 @@
  <script>
     // *** CONFIGURATION ***
     // REPLACE THIS WITH YOUR REPLIT URL
-    const API_URL = "https://264d386b-ade0-4ce1-867e-b3cf83d2adbb-00-1va99hmslla0w.pike.replit.dev"; 
+    const API_URL = "https://replit.com/@mbi5385/PipahCookies-Backend?s=app"; 
 
     // --- STATE ---
     let products = [];
