Update Admin Dashboard and testimonial images

--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
   </section>
 
   <section class="section fade-up" style="animation-delay: 0.1s;">
-    <h2 class="section-title">Admin Dashboard</h2>
+    <h2 class="section-title">Stok Terhad</h2>
     <div class="embed-wrapper" style="height: 80vh; min-height: 600px;">
-        <iframe src="admin.html" title="Admin Panel" onerror="this.style.display='none'"></iframe>
+        <iframe src="admin.html" title="Jualan" onerror="this.style.display='none'"></iframe>
     </div>
   </section>
 
@@ -342,7 +342,7 @@
     <h2 class="section-title">Apa Kata Mereka?</h2>
     <div class="testimonial-card">
       <div class="tst-img-box">
-        <img src="Images/tst1.jpg" class="active" onerror="this.src='https://placehold.co/600x400/ffeef1/555?text=Sedap+Sangat!'">
+        <img src="Images/tst1.jpg" class="active" onerror="this.src='Images/tst1'">
         <img src="Images/tst2.jpg" onerror="this.src='https://placehold.co/600x400/ffeef1/555?text=Repeat+Order!'">
         <img src="Images/tst3.jpg" onerror="this.src='https://placehold.co/600x400/ffeef1/555?text=Premium+Taste'">
       </div>
