--- a/control-panel.html
+++ b/control-panel.html
@@ -346,7 +346,7 @@
 
  <script>
     // --- DEFAULT URL (Can be changed in UI) ---
-    let API_URL = "https://264d386b-ade0-4ce1-867e-b3cf83d2adbb-00-1va99hmslla0w.pike.replit.dev";
+    let API_URL = "https://replit.com/@mbi5385/PipahCookies-Backend?s=app";
     let IS_DEMO = false;
 
     // --- GLOBAL DATA ---
