Update API_URL to point to Replit link

--- a/control-panel.html
+++ b/control-panel.html
@@ -357,7 +357,7 @@
 
  <script>
     // --- API CONFIG ---
-    let API_URL = "https://PipahCookies-Backend.mbi5385.repl.co"; 
+    let API_URL = "https://replit.com/@mbi5385/PipahCookies-Backend?s=app"; 
     let IS_DEMO = false;
 
     // --- DATA STORE ---
