--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
   <section class="section fade-up" style="animation-delay: 0.1s;">
     <h2 class="section-title">Selamat Datang ke PipahCookies</h2>
     <div class="embed-wrapper" style="height: 80vh; min-height: 600px;">
-        <iframe src="admin.html" title="Admin Panel" onerror="this.style.display='none'"></iframe>
+        <iframe src="admin.html" title="Jualan Harian" onerror="this.style.display='none'"></iframe>
     </div>
   </section>
 
