Clear API_URL in index.html
Updated API_URL to an empty string for configuration.

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
   <script>
     // *** CONFIGURATION ***
-    const API_URL = "https://replit.com/@mbi5385/PipahCookies-Backend?s=app";
+    const API_URL = "";
 
     let cart = JSON.parse(localStorage.getItem('pipah_cart_v2') || "[]");
     let products = []; 
