Clear API_URL variable in control panelh

--- a/control-panel.html
+++ b/control-panel.html
@@ -378,7 +378,7 @@
 
  <script>
     // --- CONFIG ---
-    let API_URL = "https://replit.com/@mbi5385/PipahCookies-Backend?s=app";
+    let API_URL = "";
     let IS_DEMO = false;
     let products = [];
     let galleryItems = [];
