Change API_URL to an empty stringv
Updated API_URL to an empty string for configuration.

--- a/jualan.html
+++ b/jualan.html
@@ -132,7 +132,7 @@ body {
 
 <script>
 // --- CONFIGURATION ---
-const API_URL = "https://replit.com/@mbi5385/PipahCookies-Backend?s=app"; 
+const API_URL = ""; 
 
 let products = [];
 let cards;
