Set API_URL to the new endpoint

--- a/control-panel.html
+++ b/control-panel.html
@@ -378,7 +378,7 @@
 
  <script>
     // --- CONFIG ---
-    let API_URL = "";
+    let API_URL = "https://8dde8f1a-4599-449e-9209-7cc27f6f601e-00-1wdx2q282il1o.pike.replit.dev/";
     let IS_DEMO = false;
     let products = [];
     let galleryItems = [];
