--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
   <script>
     // *** CONFIGURATION ***
-    const API_URL = "https://8dde8f1a-4599-449e-9209-7cc27f6f601e-00-1wdx2q282il1o.pike.replit.dev/";
+    const API_URL = "https://8dde8f1a-4599-449e-9209-7cc27f6f601e-00-1wdx2q282il1o.pike.replit.dev";
 
     let cart = JSON.parse(localStorage.getItem('pipah_cart_v2') || "[]");
     let products = []; 
