--- a/jualan.html
+++ b/jualan.html
@@ -132,7 +132,7 @@ body {
 
 <script>
 // --- CONFIGURATION ---
-const API_URL = "https://8dde8f1a-4599-449e-9209-7cc27f6f601e-00-1wdx2q282il1o.pike.replit.dev/"; 
+const API_URL = "https://8dde8f1a-4599-449e-9209-7cc27f6f601e-00-1wdx2q282il1o.pike.replit.dev"; 
 
 let products = [];
 let cards;
